--- a/FlashBang/FlashBang/css/custom.css
+++ b/FlashBang/FlashBang/css/custom.css
@@ -192,7 +192,7 @@ a {
   float: none;
   _float: left;
   *float: left;
-  margin-right: 5px;
+  margin-right: 10px;
   }
 
 .centered-btns_tabs a,
@@ -211,8 +211,8 @@ a {
   -webkit-box-shadow: inset 0 0 2px 0 rgba(0,0,0,.3);
   -moz-box-shadow: inset 0 0 2px 0 rgba(0,0,0,.3);
   box-shadow: inset 0 0 2px 0 rgba(0,0,0,.3);
-  width: 9px;
-  height: 9px;
+  width: 11px;
+  height: 11px;
   }
 
 .centered-btns_here a,
@@ -222,6 +222,17 @@ a {
   background: rgba(0,0,0, .8);
   }	
 
+.photo_section {
+  padding-bottom:100px;
+  padding-top:100px;
+}
 
-
-.photo_section {padding-bottom:100px; padding-top:100px;}
+.centered-btns1_tabs{
+  display: block;
+  list-style-type: disc;
+  -webkit-margin-before: 1em;
+  -webkit-margin-after: 1em;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
+  -webkit-padding-start: 0px;
+}
