--- a/FlashBang/FlashBang/css/custom.css
+++ b/FlashBang/FlashBang/css/custom.css
@@ -236,3 +236,18 @@ a {
   -webkit-margin-end: 0px;
   -webkit-padding-start: 0px;
 }
+
+#jp_container_1 {
+  margin-right:auto;
+  margin-left:auto; 
+}
+
+#jp_container_2 {
+  margin-right:auto;
+  margin-left:auto; 
+}
+
+#jp_container_3 {
+  margin-right:auto;
+  margin-left:auto; 
+}
