--- a/FlashBang/FlashBang/css/jplayer.blue.monday.css
+++ b/FlashBang/FlashBang/css/jplayer.blue.monday.css
@@ -36,8 +36,9 @@
 	font-family:Verdana, Arial, sans-serif;
 	line-height:1.6;
 	color: #666;
-	border:1px solid #009be3;
+	border:1px solid #7cc576;
 	background-color:#eee;
+	
 }
 .jp-audio {
 	width:420px;
