--- a/FlashBang/FlashBang/css/style.css
+++ b/FlashBang/FlashBang/css/style.css
@@ -347,7 +347,7 @@ color: #fff;
 .Portfolio-box{
 	text-align:center;
 	margin-bottom:30px;
-	height:350px;
+	height:400px;
 	width:350px;
 	overflow:hidden;
 	float:left;
@@ -395,8 +395,8 @@ img {
 /* Clients
 ---------------------------------*/
 .client-part{
-	background:url(../img/section-bg1.jpg) center center no-repeat;
-	background-size:cover;
+	background:url(../img/section-bg1.png) center center repeat;
+	;
 	padding:55px 0;
 	text-align:center;
 }
