--- a/FlashBang/FlashBang/css/custom.css
+++ b/FlashBang/FlashBang/css/custom.css
@@ -7,12 +7,12 @@
         
 	a:link {
 	    text-decoration: none;
-		color:#7cc576;
+		color:#ff6600;
 	}
 
 	a:visited {
 	    text-decoration: none;
-		color:#7cc576
+		color:#ff6600
 	}
 
 	a:hover {
