--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,3 +84,10 @@ Main components
     bottom: 30px;
   }
 }
+@media only screen and (max-width:700px) {
+  .logo1 {
+    width: 200px;
+    padding-top:10px;
+    padding-bottom: 10px;
+  }
+}
